prod/cliente-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-service
  labels:
    app: subscription_service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cliente-service
  template:
    metadata:
      labels:
        app: cliente-service
    spec:
      containers:
      - name: cliente-service
        image: cliente-service
        ports:
        - containerPort: 52323
