prod/cliente-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cliente-service

spec:
  selector:
    app: cliente-service

  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
